Создано с помощью Colaboratory

--- a/function_exam.ipynb
+++ b/function_exam.ipynb
@@ -6,7 +6,8 @@
       "name": "function_exam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMbYNQipl7xOR6GazuffggS"
+      "authorship_tag": "ABX9TyMzjANxYS6UIt3FcqDOkMaP",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,25 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vlad19866/Python/blob/master/function_exam.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Алгоритмический тренажер"
+      ],
+      "metadata": {
+        "id": "_AMOhPkPxaaT"
+      }
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -88,6 +108,63 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Что покажет программа ниже"
+      ],
+      "metadata": {
+        "id": "VgSzFSqK7XcF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Что покажет программа ниже\n",
+        "\n",
+        "def main():\n",
+        "  x = 1\n",
+        "  y = 3.4\n",
+        "  print('X равно: ', x, 'Y равно: ', y)\n",
+        "  change_us(x, y)\n",
+        "  print('Вернул значение:', x, y)\n",
+        "\n",
+        "def change_us(a, b):\n",
+        "  a = 0\n",
+        "  b = 0\n",
+        "  print('A равно: ', a, 'B равно: ', b)\n",
+        "\n",
+        "main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JGaJsNmm7SY8",
+        "outputId": "f6e21f6e-09d8-42fe-b317-dec989383312"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X равно:  1 Y равно:  3.4\n",
+            "A равно:  0 B равно:  0\n",
+            "Вернул значение: 1 3.4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Упражнения по программированию"
+      ],
+      "metadata": {
+        "id": "tIZnTqszxjI7"
+      }
     }
   ]
 }
